--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@rjsf/core": "^2.5.1",
+    "@rjsf/material-ui": "^2.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
+    "formik": "^2.2.9",
     "moment": "^2.29.1",
+    "notistack": "^1.0.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
